Implemented Maze IO and a half of graph creating code, groomed pom